# pretix-nix

./: README.md  flake.nix  nixos-module.nix  node-packages.nix  pyproject.toml  pyproject.toml.template
