[tool.poetry]
name = "pretix"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
amqp = "==2.6.1"
arabic-reshaper = "==2.0.15"
asgiref = "==3.3.1"
attrs = "==20.3.0"
Babel = "==2.9.0"
beautifulsoup4 = "==4.8.2"
billiard = "==3.6.3.0"
bleach = "==3.1.5"
cbor2 = "==5.2.0"
celery = "==4.4.7"
certifi = "==2020.12.5"
cffi = "==1.14.4"
chardet = "==3.0.4"
cryptography = "==3.3.1"
csscompressor = "==0.9.5"
cssutils = "==1.0.2"
defusedcsv = "==1.1.0"
dj-static = "==0.0.6"
Django = "==3.0.11"
django-appconf = "==1.0.4"
django-bootstrap3 = "==12.0.3"
django-compat = "==1.0.15"
django-compressor = "==2.4"
django-countries = "==7.0"
django-filter = "==2.2.0"
django-formset-js-improved = "==0.5.0.2"
django-formtools = "==2.2"
django-hierarkey = "==1.0.4"
django-hijack = "==2.1.10"
django-i18nfield = "==1.8.1"
django-jquery-js = "==3.1.1"
django-jsonfallback = "==2.1.2"
django-libsass = "==0.8"
django-localflavor = "==3.0.1"
django-markup = "==1.5"
django-mysql = "==3.10.0"
django-oauth-toolkit = "==1.2.0"
django-otp = "==0.7.5"
django-phonenumber-field = "==4.0.0"
django-redis = "==4.11.0"
django-scopes = "==1.2.0"
django-statici18n = "==1.9.0"
djangorestframework = "==3.11.2"
elementpath = "==2.1.1"
et-xmlfile = "==1.0.1"
future = "==0.18.2"
idna = "==2.10"
inlinestyler = "==0.2.5"
isoweek = "==1.3.3"
jdcal = "==1.4.1"
jsonschema = "==3.2.0"
kombu = "==4.6.11"
libsass = "==0.20.1"
lxml = "==4.6.2"
Markdown = "==3.3.3"
mt-940 = "==3.2"
oauthlib = "==3.1.0"
openpyxl = "==3.0.6"
packaging = "==20.8"
paypalrestsdk = "==1.13.1"
phonenumberslite = "==8.11.5"
Pillow = "==7.2.0"
ply = "==3.11"
protobuf = "==3.13.0"
psycopg2-binary = "==2.8.6"
pycountry = "==20.7.3"
pycparser = "==2.13"
pyOpenSSL = "==20.0.1"
pyparsing = "==2.4.7"
PyPDF2 = "==1.26.0"
pyrsistent = "==0.17.3"
python-bidi = "==0.4.2"
python-dateutil = "==2.8.1"
python-stdnum = "==1.15"
python-u2flib-server = "==4.0.1"
pytz = "==2020.5"
pyuca = "==1.2"
PyYAML = "==5.4"
rcssmin = "==1.0.6"
redis = "==3.4.1"
reportlab = "==3.5.59"
requests = "==2.24.0"
rjsmin = "==1.1.0"
sentry-sdk = "==0.14.4"
sepaxml = "==2.4.1"
six = "==1.15.0"
slimit = "==0.8.1"
soupsieve = "==2.1"
sqlparse = "==0.4.1"
static3 = "==0.7.0"
stripe = "==2.42.0"
text-unidecode = "==1.3"
tlds = "==2021011801"
tqdm = "==4.56.0"
urllib3 = "==1.25.11"
vat-moss-forked = "==2020.3.20.0.11.0"
vine = "==1.3.0"
vobject = "==0.9.6.1"
webauthn = "==0.4.7"
webencodings = "==0.5.1"
xmlschema = "==1.4.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
