[tool.poetry]
name = "pretix"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "==3.0.*,>=3.0.9"
djangorestframework = "==3.11.*"
python-dateutil = "==2.8.*"
isoweek = "^1.3.3"
requests = "==2.24.0"
pytz = "^2020.5"
django-bootstrap3 = "==12.0.*"
django-formset-js-improved = "==0.5.0.2"
django-compressor = "==2.4.*"
django-hierarkey = "==1.0.*,>=1.0.4"
django-filter = "==2.2.*"
django-scopes = "==1.2.*"
reportlab = ">=3.5.18*"
PyPDF2 = "==1.26.*"
Pillow = "==7.*"
django-libsass = "==0.8"
libsass = "==0.20.*"
django-otp = "==0.7.*,>=0.7.5"
python-u2flib-server = "==4.*"
webauthn = "==0.4.*"
django-formtools = "==2.2"
celery = "==4.4.*"
kombu = "==4.6.*"
django-statici18n = "==1.9.*"
inlinestyler = "==0.2.*"
BeautifulSoup4 = "==4.8.*"
slimit = "^0.8.1"
lxml = "^4.6.2"
static3 = "==0.7.*"
dj-static = "^0.0.6"
csscompressor = "^0.9.5"
django-markup = "^1.5"
markdown = "==3.3.*"
bleach = ">=3.1.4,<3.2.0"
sentry-sdk = "==0.14.*"
babel = "^2.9.0"
django-i18nfield = ">=1.7.0"
django-hijack = ">=2.1.10,<2.2.0"
jsonschema = "^3.2.0"
openpyxl = "==3.0.*"
django-oauth-toolkit = "==1.2.*"
oauthlib = "==3.1.*"
django-jsonfallback = ">=2.1.2"
psycopg2-binary = "^2.8.6"
tqdm = "==4.*"
stripe = "==2.42.*"
paypalrestsdk = "==1.13.*"
pycparser = "==2.13"
chardet = "<3.1.0,>=3.0.2"
mt-940 = "==3.2"
vobject = "==0.9.*"
pycountry = "^20.7.3"
django-countries = ">=6.0"
pyuca = "^1.2"
defusedcsv = ">=1.1.0"
vat_moss_forked = "==2020.3.20.0.11.0"
django-localflavor = ">=2.2"
django-redis = "==4.11.*"
redis = "==3.4.*"
django-phonenumber-field = "==4.0.*"
phonenumberslite = "==8.11.*"
python-bidi = "==0.4.*"
arabic-reshaper = "==2.0.15"
packaging = "^20.8"
tlds = ">=2020041600"
text-unidecode = "==1.*"
protobuf = "==3.13.*"
cryptography = "^3.3.1"
sepaxml = "==2.4.*,>=2.4.1"
gunicorn = "^20.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
