[tool.poetry]
name = "pretix"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
arabic-reshaper = "==2.1.3"
Babel = "^2.9.1"
beautifulsoup4 = "==4.10.*"
bleach = "==4.1.*"
celery = "==4.4.*"
chardet = "==4.0.*"
cryptography = ">=3.4.2"
csscompressor = "^0.9.5"
css-inline = "==0.7.*"
defusedcsv = ">=1.1.0"
dj-static = "^0.0.6"
Django = "==3.2.*"
django-bootstrap3 = "==15.0.*"
django-compressor = "==2.4.*"
django-countries = ">=7.2"
django-filter = "==21.1"
django-formset-js-improved = "==0.5.0.2"
django-formtools = "==2.3"
django-hierarkey = "==1.0.*,>=1.0.4"
django-hijack = "==3.1.*"
django-i18nfield = "==1.9.*,>=1.9.4"
django-libsass = "==0.9"
django-localflavor = "==3.1"
django-markup = "^1.5"
django-mysql = "^4.5.0"
django-oauth-toolkit = "==1.2.*"
django-otp = "==1.1.*"
django-phonenumber-field = "==6.0.*"
django-redis = "==5.0.*"
django-scopes = "==1.2.*"
django-statici18n = "==2.2.*"
djangorestframework = "==3.13.*"
dnspython = "<2.0"
drf-ujson2 = "==1.6.*"
isoweek = "^1.3.3"
jsonschema = "^4.4.0"
kombu = "==4.6.*"
libsass = "==0.21.*"
lxml = "^4.8.0"
Markdown = "==3.3.4"
mt-940 = "==4.23.*"
oauthlib = "==3.1.*"
openpyxl = "==3.0.*"
packaging = "^21.3"
paypalrestsdk = "==1.13.*"
phonenumberslite = "==8.12.*"
Pillow = "==9.*"
protobuf = "==3.19.*"
psycopg2-binary = "^2.9.3"
pycountry = "^22.1.10"
pycparser = "==2.21"
PyPDF2 = "==1.26.*"
python-bidi = "==0.4.*"
python-dateutil = "==2.8.*"
python-u2flib-server = "==4.*"
pytz = "^2021.3"
pyuca = "^1.2"
redis = "==3.5.*"
reportlab = "==3.6.*"
requests = "==2.27.*"
sentry-sdk = "==1.5.*"
sepaxml = "==2.4.*,>=2.4.1"
slimit = "^0.8.1"
static3 = "==0.7.*"
stripe = "==2.66.*"
text-unidecode = "==1.*"
tlds = ">=2020041600"
tqdm = "==4.*"
vat-moss-forked = "==2020.3.20.0.11.0"
vobject = "==0.9.*"
webauthn = "==0.4.*"
zeep = "==4.1.*"
pretix-covid-certificates = "^2.1.0"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry>=0.12", "setuptools-rust"]
build-backend = "poetry.masonry.api"
